Reduce complexity in name generator